<resources>
    <string name="app_name">Families</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Menu Options Opened</string>
    <string name="navigation_drawer_close">Menu Options Closed</string>
    <string name="drawer_text">Navigation_Drawer</string>
    <string name="action_add_family">Add a new family</string>
    <string name="title_activity_add_family">AddFamily</string>
    <string name="family_create">Create a new Family.</string>
    <string name="family_create_desc">A Family is a private group for sharing answers to the Question of the Day.</string>
    <string name="member_add">Invite a new member to your Family.</string>
    <string name="family_hint">Family Name</string>
    <string name="title_activity_add_family_member">Add Family Member</string>
    <string name="email_hint">Email</string>
    <string name="message_hint">Hey! Welcome to my Family, on Povi Family Connect, my children\'s answers to a Question of the Day!</string>

</resources>
