<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/add_family"
    android:background="@color/colorBackgroundLight"
    android:gravity="top">


    <TextView
        android:id="@+id/text_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="15dp"
        android:background="@color/colorAccent"
        android:text="@string/family_create"
        android:textColor="@color/colorBackgroundLight"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/text_description"
        android:text="@string/family_create_desc"
        android:textColor="@color/colorBackgroundLight"
        android:textSize = "14dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:layout_below="@id/text_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_alignParentLeft="true"/>

    <EditText
        android:id="@+id/edit_family_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:hint="@string/family_hint"
        android:ems="10"
        android:layout_marginLeft="10dp"

        android:layout_below="@+id/text_description"/>


    <Button
        android:id="@+id/button_cancel"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="cancelOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:textColor="@color/colorBackgroundDark"
        android:layout_below="@id/edit_family_name"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button_create"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:onClick="createFamily"
        android:layout_height="wrap_content"
        android:text="Create"
        android:textColor="@color/colorAccent"
        android:layout_alignTop="@id/button_cancel"
        android:layout_alignParentRight="true" />

</RelativeLayout>