<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:background="@color/colorBackgroundLight"
        tools:context="com.povi.povifamilyselect.AddFamilyMemberActivity">

        <TextView
            android:id="@+id/member_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"
            android:textColor="@color/colorBackgroundLight"
            android:text="@string/member_add"
            android:textSize="18dp"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/edit_family_member_email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColorHint="@color/colorBackgroundDark"
            android:ems="10"
            android:layout_below="@+id/member_intro"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <EditText
            android:id="@+id/edit_family_member_message"
            android:gravity="top"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:maxLines="30"
            android:hint="@string/message_hint"
            android:textColorHint="@color/colorBackgroundDark"
            android:textAlignment="gravity"
            android:ems="5"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            android:layout_below="@+id/edit_family_member_email"/>


        <Button
            android:id="@+id/button_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="cancelOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textColor="@color/colorBackgroundDark"
            android:layout_below="@id/edit_family_member_message"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:layout_alignParentLeft="true" />

        <Button
            android:onClick="addFamilyMember"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/button_add_family_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send"
            android:textColor="@color/colorAccent"
            android:layout_alignBaseline="@id/button_cancel"
            android:layout_alignParentRight="true" />

    </RelativeLayout>


